--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,17 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ably/ably-php": "^1.1",
+        "ably/laravel-broadcaster": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
-        "laravel/jetstream": "^3.2",
+        "laravel/jetstream": "^4.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^2.11"
+        "laravel/vapor-core": "^2.32",
+        "livewire/livewire": "^3.0",
+        "pusher/pusher-php-server": "^7.2",
+        "stancl/tenancy": "@dev"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -20,8 +25,7 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0",
-        "stancl/tenancy": "dev-master"
+        "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
         "psr-4": {
