--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
         "@alpinejs/focus": "^3.10.5",
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.0",
-        "alpinejs": "^3.0.6",
         "autoprefixer": "^10.4.7",
         "axios": "^1.1.2",
+        "laravel-echo": "^1.15.3",
         "laravel-vite-plugin": "^0.7.5",
         "postcss": "^8.4.14",
+        "pusher-js": "^8.3.0",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@ably/laravel-echo": "^1.0.3",
+        "ably": "^1.2.44"
     }
 }
